--- a/gitR.Rmd
+++ b/gitR.Rmd
@@ -1,6 +1,9 @@
 ---
 title: "R GIT"
-output: html_notebook
+output:
+  html_document:
+    df_print: paged
+  pdf_document: default
 ---
 
 ## Install Git
@@ -35,6 +38,21 @@ usethis::edit_git_config() #In Ubuntu toggle the hidden files
 ```{r}
 #Another way is to perform the same global config procedure in Rstudio
 use_git_config(user.name = "*****", user.email = "***********")
+```
+
+## Interfacing with Github
+
+```{r}
+#usethis is used for token generation
+#a token i put online ridiculous: ********(I hid it and that rpubs document will be discarded shortly after this concise git and github Rstudio notebook)
+#what can i say i am smarter now.
+usethis::create_github_token()
+
+#Passing the baton to gitcreds
+#this procedure is performed outside a project otherwise it fails
+gitcreds::gitcreds_set()
+#? Enter password or token: ***************
+use_github() #creates the repo on github
 ```
 
 
